it has fixed notes number 1